--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 /* index.css */
+.theme {
+  color: #000000;
+  background-color: #e4f77f;
+}
+
 
 body {
   margin: 0;
@@ -18,6 +23,7 @@ div,
 section,
 main {
   box-sizing: border-box;
+  background-color: #000;
 }
 
 nav {
@@ -59,6 +65,7 @@ select {
   height: 40px;
   margin: 5px;
   font-size: 1rem;
+
 }
 
 .App {
@@ -85,7 +92,7 @@ select {
   border: 1px solid #f98a8a;
 }
 
-.MovieCard {
+.ProductCard {
   border: 1px solid grey;
   box-shadow: 0px 2px 3px grey;
   width: 400px;
@@ -93,6 +100,8 @@ select {
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 4px;
+  color: #000000;
+  background-color: #e4f77f;
 }
 
 .Spinner {
